bo-api/gradle_err.txt
Starting a Gradle Daemon, 12 busy and 2 incompatible and 2 stopped Daemons could not be reused, use --status for details

> Task :compileJava
C:\Users\Administrator\.gemini\workspace\Bo\bo-api\src\main\java\com\lselectric\bo\service\AdminService.java:43: error: incompatible types: String cannot be converted to HttpStatus
            throw new BusinessException("DUPLICATE_EMAIL", "이미 등록된 이메일 계정입니다.", HttpStatus.BAD_REQUEST);
                                        ^
C:\Users\Administrator\.gemini\workspace\Bo\bo-api\src\main\java\com\lselectric\bo\service\AdminService.java:46: error: incompatible types: String cannot be converted to HttpStatus
            throw new BusinessException("DUPLICATE_EMPLOYEE_ID", "이미 등록된 사번입니다.", HttpStatus.BAD_REQUEST);
                                        ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors

> Task :compileJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 30s
1 actionable task: 1 executed
